src/objects/Documentos_Profesionales_Contrato__c.object
<CustomObject>
    <description>Sirve para identificar los diferentes documentos de los que se dispone asociados a cada Profesional Contrato</description>
    <fields>
        <fullName>DPC_DAT_Fecha_Baja__c</fullName>
        <label>Fecha Baja</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DPC_DAT_Fecha_Entrega__c</fullName>
        <description>Fecha en la que el Profesional Contrato aportó el documento asociado al registro</description>
        <label>Fecha Entrega</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DPC_DAT_Fecha_Expiracion__c</fullName>
        <description>Indica la fecha en la que expira el documento asociado al registro</description>
        <label>Fecha Expiración</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DPC_LKP_Profesional_Contrato__c</fullName>
        <description>Indica la cuenta Profesional Contrato a la que se asocia  el documento registrado</description>
        <label>Profesional Contrato</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>La cuenta seleccionada no es válida.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Profesional Contrato</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documentos de Profesional Contrato</relationshipLabel>
        <relationshipName>Documentos_de_Profesional_Contrato</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DPC_LKP_Tipo_de_Documento__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tipo de Documento</label>
        <referenceTo>Tipo_de_documento__c</referenceTo>
        <relationshipLabel>Documentos de Profesional Contrato</relationshipLabel>
        <relationshipName>Documentos_de_Profesional_Contrato</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DPC_TXT_Identificador__c</fullName>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Documento de Profesional Contrato</label>
    <nameField>
        <displayFormat>DPC-{000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos de Profesional Contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Documento_sin_fecha_expiracion</fullName>
        <active>true</active>
        <description>Regla que salta si se rellena la fecha de expiración de un documento que no la requiere</description>
        <errorConditionFormula>(!DPC_LKP_Tipo_de_Documento__r.DOC_CAS_Validez__c)&amp;&amp; NOT(ISNULL(DPC_DAT_Fecha_Expiracion__c))</errorConditionFormula>
        <errorDisplayField>DPC_DAT_Fecha_Expiracion__c</errorDisplayField>
        <errorMessage>Este tipo de documento no requiere fecha de expiración</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fecha_de_expiracion_obligatoria</fullName>
        <active>true</active>
        <description>Requerimiento de fecha de expiración para ciertos tipos de documentos</description>
        <errorConditionFormula>(DPC_LKP_Tipo_de_Documento__r.DOC_CAS_Validez__c) &amp;&amp; ISNULL(DPC_DAT_Fecha_Expiracion__c)</errorConditionFormula>
        <errorDisplayField>DPC_DAT_Fecha_Expiracion__c</errorDisplayField>
        <errorMessage>Este tipo de documento requiere fecha de expiración.</errorMessage>
    </validationRules>
</CustomObject>